Provide CSS fallback for browsers without custom css properties.

--- a/packages/openneuro-app/src/sass/crn_app/_bootstrap.overrides.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_bootstrap.overrides.scss
@@ -19,6 +19,7 @@ $text-danger:          $brand-danger;
 
 // Text color class overrides
 .text-primary {
+    color: $primary;
     color: var(--primary);
 }
 
