--- a/packages/openneuro-app/src/sass/crn_app/_dataset.comments.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.comments.scss
@@ -9,6 +9,7 @@
     outline: none;
   }
   blockquote.RichEditor-blockquote {
+    border-left: 5px solid $primary;
     border-left: 5px solid var(--primary);
   }
   .comment-header {
@@ -31,6 +32,7 @@
       .uploader-following {
         float: left;
         padding-top: 6px;
+        color: $primary;
         color: var(--primary);
       }
     }
@@ -107,6 +109,7 @@
       }
 
       .copy-notification-active, .copy-notification-hidden {
+        color: $primary;
         color: var(--primary);
         cursor: default;
       }
@@ -132,8 +135,10 @@
       font-size: 12px;
       a {
         text-transform: uppercase;
+        color: $primary;
         color: var(--primary);
         &:hover {
+          color: $secondary;
           color: var(--secondary);
         }
       }
@@ -205,8 +210,10 @@
 
 .comment-submit {
   background: $white;
+  color: $primary;
   color: var(--primary);
   width: 90%;
+  border: 2px solid $primary;
   border: 2px solid var(--primary);
   border-radius: 0px;
   margin-left: 4%;
@@ -214,8 +221,10 @@
     outline: none !important;
   }
   &:hover {
+    background-color: $secondary;
     background-color: var(--secondary);
     color: $white;
+    border: 2px solid $secondary;
     border: 2px solid var(--secondary);
   }
 }
@@ -230,6 +239,7 @@
 
 .dataset-owner-flag {
   padding: 0px 2px;
+  background-color: $primary;
   background-color: var(--primary);
   color: $white;
 }
