--- a/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
@@ -20,6 +20,7 @@
             text-align: center;
             width: 17px;
             height: 17px;
+            color: $primary;
             color: var(--primary);
             font-weight: 600;
         }
@@ -27,6 +28,7 @@
 
     &.navbar-right {
         a {
+            color: $dashboard-tab-text-color;
             color: var(--dashboard-tab-text-color);
             padding: 5px;
             background: none;
@@ -35,6 +37,7 @@
 
             &:hover {
                 background: none;
+                color: $primary;
                 color: var(--primary);
             }
         }
@@ -93,6 +96,7 @@
             &.active,
             &:hover {
                 background: $eee;
+                color: $primary;
                 color: var(--primary);
 
                 &.filter-shared {
@@ -233,6 +237,7 @@
                 display: block;
                 padding: 10px 20px;
                 transition: background 1s ease;
+                color: $primary;
                 color: var(--primary);
                 width: 60%;
                 float: left;
@@ -262,6 +267,7 @@
                 }
 
                 &:hover {
+                    color: $primary-hover;
                     color: var(--primary-hover);
                 }
 
