--- a/packages/openneuro-app/src/sass/crn_app/_dataset.dataset.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.dataset.scss
@@ -10,6 +10,7 @@
                 padding: 0;
                 text-transform: none;
                 font-weight: 300;
+                font-family: $font-family-open;
                 font-family: var(--font-family-open);
                 font-size: 40px;
                 color: $c-33;
