--- a/packages/openneuro-app/src/sass/crn_app/_dataset.file-tree.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.file-tree.scss
@@ -37,6 +37,7 @@
 
                 a {
                     text-decoration: none;
+                    color: $primary;
                     color: var(--primary);
                     background: none;
                     margin: 0;
@@ -48,6 +49,7 @@
 
                     &:hover {
                         text-decoration: none;
+                        color: $primary-hover;
                         color: var(--primary-hover);
                     }
                 }
