--- a/packages/openneuro-app/src/sass/crn_app/_dataset.jobs.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.jobs.scss
@@ -240,6 +240,7 @@
                         margin: 0;
                         background: none;
                         border: 0;
+                        color: $secondary;
                         color: var(--secondary);
 
                         i {
