--- a/packages/openneuro-app/src/sass/crn_app/_dataset.sidebar.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.sidebar.scss
@@ -133,9 +133,11 @@ body,
                 &.active {
                     background-color:  $white;
                     box-shadow: inset 0 0 2px $transparent1;
+                    color: $secondary;
                     color: var(--secondary);
 
                     .date-modified {
+                        color: $secondary;
                         color: var(--secondary);
                     }
                 }
