Fix accidentally swapped fonts after adding fallbacks.

--- a/packages/openneuro-app/src/sass/crn_app/_dataset.dataset.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.dataset.scss
@@ -27,6 +27,7 @@
 
                 .cte-save-btn {
                     font-size: 16px;
+                    font-family: $font-family-cabin;
                     font-family: var(--font-family-cabin);
                 }
             }
