--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -45,6 +45,7 @@ body,
 .route-wrapper{height: 100%;}
 
 body {
+    font-family: $font-family-cabin;
     font-family: var(--font-family-cabin);
     letter-spacing: .03em;
 }
