--- a/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
@@ -307,7 +307,7 @@
             font-weight: 200;
             .logo-text{
                  font-size: 50px;
-                 font-family: $font-family-open;
+                 font-family: $font-family-cabin;
                 font-family: var(--font-family-cabin);
             }
             .col-sm-6{
