--- a/packages/openneuro-app/src/sass/crn_app/_dataset.file-tree.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.file-tree.scss
@@ -62,6 +62,7 @@
             .panel-body {
                 border-top: 1px solid transparent;
                 color: $c-56;
+                font-family: $font-family-cabin;
                 font-family: var(--font-family-cabin);
                 font-size: 11px;
 
@@ -131,6 +132,7 @@
                         display: inline-block;
                         max-width: 100%;
                         margin-bottom: 5px;
+                        font-family: $font-family-cabin;
                         font-family: var(--font-family-cabin);
                     }
 
