Improve error handling for uploads.
The main addition is new toasts for upload failures.

--- a/packages/openneuro-app/src/sass/main.scss
+++ b/packages/openneuro-app/src/sass/main.scss
@@ -4,6 +4,9 @@ $bootstrap-sass-asset-helper: true;
 // Always required /_properties if not importing all animate/animate.scss
 @import 'animate/properties';
 
+// react-toastify
+@import '~react-toastify/dist/ReactToastify.css';
+
 //font  //=================================================================
 @import './font-awesome/font-awesome';
 
