Style react-toastify error and warning toasts to follow site style.

--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -647,6 +647,26 @@ h6 {
     }
 }
 
+// Toasts
+
+.Toastify__toast {
+    text-align: center;
+    background: $white;
+    color: $black;
+    padding: 1em;
+    .Toastify__close-button--error {
+        color: $black;
+    }
+}
+
+.Toastify__toast--warning {
+    border-top: 4px solid $warning;
+}
+
+.Toastify__toast--error {
+    border-top: 4px solid $danger;
+}
+
 //form ========================
 
 %form-field {
