Implement rough virtual scrolling for paginated dashboard.

--- a/packages/openneuro-app/src/sass/main.scss
+++ b/packages/openneuro-app/src/sass/main.scss
@@ -7,6 +7,9 @@ $bootstrap-sass-asset-helper: true;
 // react-toastify
 @import '~react-toastify/dist/ReactToastify.css';
 
+// react-virtualized
+@import '~react-virtualized/styles.css';
+
 //font  //=================================================================
 @import './font-awesome/font-awesome';
 
