Rework dashboard css to use flex all the way down.

--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -50,6 +50,11 @@ body {
     letter-spacing: .03em;
 }
 
+.main {
+    display: flex;
+    flex-direction: column;
+}
+
 .container {
     width: 100%;
 
