Fix layout regressions from new dashboard changes.

--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -115,8 +115,11 @@ h6 {
     font-family: var(--font-family-open);
 }
 
-.page {
+#main {
     background: $e5;
+}
+
+.page {
     width: 100%;
 
     &.snapshot,
