--- a/packages/openneuro-app/src/sass/crn_app/_nav.navbar.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_nav.navbar.scss
@@ -6,6 +6,8 @@
 
 .navbar {
     z-index: 1300;
+    border-left: 0;
+    border-right: 0;
     border-top: 10px solid $navbar-top-border-color;
     border-top: 10px solid var(--navbar-top-border-color);
     position: fixed;
