Replace remaining uses of notification store with react-toastify.

--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -664,6 +664,10 @@ h6 {
     }
 }
 
+.Toastify__toast--success {
+    border-top: 4px solid $success;
+}
+
 .Toastify__toast--warning {
     border-top: 4px solid $warning;
 }
