--- a/packages/openneuro-app/src/sass/crn_app/_nav.navbar.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_nav.navbar.scss
@@ -37,6 +37,7 @@
     margin: 0;
     padding: 0;
     z-index: 800;
+    border-radius: 0;
     .container{
         padding: 0;
         .navbar-collapse{
