CSS and markup cleanups for Reflux refactors.

--- a/packages/openneuro-app/src/sass/crn_app/_dataset.sidebar.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.sidebar.scss
@@ -32,7 +32,7 @@ body,
 }
 
 .dataset-wrap,
-.dataset-annimation {
+.dataset-animation {
     position: relative;
 }
 
@@ -41,7 +41,7 @@ body,
     margin-top: 45px;
 }
 
-.dataset-annimation {
+.dataset-animation {
     width: 100%;
     padding-top: 15px;
     -webkit-transition: width .3s;
