Implement schema and display for new front page activity block.

--- a/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
@@ -367,7 +367,7 @@
         max-width: 1500px;
 
         .mate-slide{
-            height: 360px;
+            min-height: 360px;
             padding: 40px 50px 50px;
 
             h4{
