create & style display component EmailSubscriptionForm

--- a/packages/openneuro-app/src/sass/_bootstrap.scss
+++ b/packages/openneuro-app/src/sass/_bootstrap.scss
@@ -48,3 +48,4 @@
 // Utility classes
 @import "bootstrap/utilities";
 @import "bootstrap/responsive-utilities";
+@import "bootstrap/float-label.scss";
