--- a/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
@@ -129,7 +129,7 @@
     .nav.nav-tabs{
         background: $white;
         border: 0;
-        border-bottom: 2px solid $e1;
+        // border-bottom: 2px solid $e1;
         border-top: 2px solid $e1;
         justify-content: center;
         display: flex;
