Add maintanence warning toast.

--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -662,6 +662,9 @@ h6 {
     .Toastify__close-button--error {
         color: $black;
     }
+    .Toastify__progress-bar {
+        background: $eee;
+    }
 }
 
 .Toastify__toast--success {
