--- a/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
@@ -265,13 +265,13 @@
                 &.collaborate{
                         width: 560px;
                 }
-                &.analyse{
-                    width: 360px;
+                &.analyze{
+                    width: 250px;
                     margin: 0px 0 0 0;
-                }
                 &.publish{
                     width: 270px;
                 }
+            }
             }
         }
         .caption {
