add search box to front page

--- a/packages/openneuro-app/src/sass/crn_app/_dataset.dataset.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.dataset.scss
@@ -81,6 +81,7 @@
         .float-label-input {
           width: 75%;
           label {
+            position: absolute;
             font-size: 10px;
             padding-right: 5px;
             right: 10px;
