--- a/packages/openneuro-app/src/sass/crn_app/_faq.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_faq.scss
@@ -26,7 +26,7 @@
                 line-height: 18px;
             }
             p {
-                display: inline-block;
+                display: inline;
             }
         }
 
