add mobile border between green cards

--- a/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
@@ -472,6 +472,12 @@
     }
 }
 
+@media only screen and (max-width: 765px) {
+    .mate-slide{
+    border-bottom: inset #009b76;
+    }
+}
+
 .mate-analyses-header {
     margin-bottom: 10px;
 }
