--- a/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
@@ -61,7 +61,7 @@
     border-bottom: 1px solid $ddd;
 
     .filters {
-        float: right;
+        float: left;
         text-align: right;
         padding: 0;
         margin: 0;
@@ -74,7 +74,7 @@
             font-weight: 600;
             color: $c-77;
             text-align: right;
-            padding: 0 10px 0 0;
+            padding: 0 10px 0 20px;
 
         }
 
@@ -179,6 +179,7 @@
     }
 }
 
+
 // Dashboard teaser layout for Datasets ========================
 
 .dashboard-dataset-teasers {
@@ -235,19 +236,23 @@
 
             a {
                 display: block;
-                padding: 10px 20px;
+                padding: 5px 5px 1px 5px;
                 transition: background 1s ease;
                 color: $primary;
                 color: var(--primary);
-                width: 60%;
+                width: 68%;
                 float: left;
+                margin-bottom: 5px;
 
                 .dataset-name {
                     border: 0;
-                    margin: 5px 0 10px;
+                    margin: 5px 0 5px;
                     font-size: 17px;
                     padding: 0;
-                    line-height: 17px;
+                    line-height: 1em;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;
                 }
 
                 p {
@@ -293,7 +298,8 @@
                 width: auto;
                 float: right;
                 box-sizing: border-box;
-                padding: 10px 10px;
+                padding: 1px 5px;
+                
 
                 .status-wrap, .metrics-wrap {
                     list-style: none;
@@ -342,9 +348,11 @@
                     color: $c-90;
                     font-size: 10px;
                     padding: 0;
-                    line-height: 15px;
+                    line-height: 2vh;
                     text-align: left;
                     text-transform: uppercase;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
 
                     .name {
                         color: $c-33;
@@ -362,20 +370,25 @@
         .minimal-summary {
             display: flex;
             width: 100%;
+            height: 100%;
             padding: 0;
-            border-top: 1px solid $f4;
+            color: #333;
+            position: absolute;
+            padding-top: 2vh;
+            overflow: hidden;
+            border: solid 1px white;
             .summary-data {
                 display: inline-flex;
-                padding: 5px 20px;
+                padding: 2px 15px;
                 font-size: 12px;
-                line-height: 12px;
-                color: $c-33;
-                text-align: left;
-                border-right: 1px solid $f4;
+                color: #333;
+                text-align: justify;
+                border: 1px solid #e5e5e5;
+                
 
 
                     &:last-child {
-                        border: 0;
+                        border: 1px solid #e5e5e5;
                     }
 
                     b,
