--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -52,9 +52,16 @@ body {
     font-family: $font-family-cabin;
     font-family: var(--font-family-cabin);
     letter-spacing: .03em;
-    background: $white;
-    display: flex;
+    background: $e5;
 }
+
+@media only screen and (max-width: 765px) {
+    body{
+        background: $white;
+        display: flex;
+    }
+}
+
 
 .main {
     display: flex;
