--- a/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
@@ -472,7 +472,7 @@
     }
 }
 // limits num of <li> items that populate the browse containers on mobile
-@media ( max-width: 765px) { 
+@media only screen and  ( max-width: 765px) { 
     .row > div > div > div:nth-child(n + 5) {
         display: none;
     }
