--- a/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
@@ -61,7 +61,7 @@
     border-bottom: 1px solid $ddd;
 
     .filters {
-        float: left;
+        float: right;
         text-align: right;
         padding: 0;
         margin: 0;
@@ -74,7 +74,7 @@
             font-weight: 600;
             color: $c-77;
             text-align: right;
-            padding: 0 10px 0 20px;
+            padding: 0 10px 0 0;
 
         }
 
@@ -236,20 +236,20 @@
 
             a {
                 display: block;
-                padding: 5px 5px 1px 5px;
+                padding: 10px 20px;
                 transition: background 1s ease;
                 color: $primary;
                 color: var(--primary);
-                width: 68%;
+                width: 60%;
                 float: left;
                 margin-bottom: 5px;
 
                 .dataset-name {
                     border: 0;
-                    margin: 5px 0 5px;
+                    margin: 5px 0 10px;
                     font-size: 17px;
                     padding: 0;
-                    line-height: 1em;
+                    line-height: 17px;
                     text-overflow: ellipsis;
                     white-space: nowrap;
                     overflow: hidden;
@@ -298,7 +298,7 @@
                 width: auto;
                 float: right;
                 box-sizing: border-box;
-                padding: 1px 5px;
+                padding: 10px 10px;
                 
 
                 .status-wrap, .metrics-wrap {
@@ -348,7 +348,7 @@
                     color: $c-90;
                     font-size: 10px;
                     padding: 0;
-                    line-height: 2vh;
+                    line-height: 15px;
                     text-align: left;
                     text-transform: uppercase;
                     overflow: hidden;
@@ -376,19 +376,20 @@
             position: absolute;
             padding-top: 2vh;
             overflow: hidden;
-            border: solid 1px white;
+            border-top: 1px solid $f4;
             .summary-data {
                 display: inline-flex;
-                padding: 2px 15px;
+                padding: 5px 20px;
                 font-size: 12px;
-                color: #333;
-                text-align: justify;
-                border: 1px solid #e5e5e5;
+                color: $c-33;
+                text-align: left;
+                border-right: 1px solid $f4;
+                line-height: 12px;	
                 
 
 
                     &:last-child {
-                        border: 1px solid #e5e5e5;
+                        border: 0;
                     }
 
                     b,
