fix summary data width

--- a/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
@@ -449,6 +449,7 @@
                 white-space: pre-wrap;
                 text-overflow: ellipsis;
                 overflow: hidden;
+                width: 80%;
 
             [class='summary-data'] {
                     display:none;
