--- a/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
@@ -291,8 +291,9 @@
             }
             @media only screen and (max-width: 765px) {
                 a {
-                    width:75%;
-                    padding: 10px 10px 0px 20px;
+                    width: 80%;
+                    padding: 10px 5px 0px 20px;
+                    border-right: 1px solid #f4f4f4;
                 }
             }
 
@@ -338,7 +339,14 @@
                                 margin: 0 5px 0 0;
                             }
                         }
+                        @media only screen and (max-width: 765px) {
+                            .dataset-status {
+                                display: flex;
+                                flex-wrap: wrap;
+                            }
+                        }
                     }
+                        
                 }
 
                 .file-wrap {
@@ -349,6 +357,15 @@
                         font-size: 10px;
                         padding: 0 5px;
                         margin-top: 1px;
+                    }
+                }
+                
+                @media only screen and (max-width: 765px) {
+                    .metrics-wrap { 
+                        display: flex;
+                        position: fixed;
+                        flex-wrap: wrap;
+                        left: 77%;
                     }
                 }
             }
@@ -389,7 +406,7 @@
                     width: auto;
                     float: none;
                     box-sizing: border-box;
-                    padding: 5px 5px 0px 0px;
+                    padding: 10px 2px 0px 0px;
                     align-items: center;
                 }
             }
@@ -444,12 +461,14 @@
         }
         @media only screen and (max-width: 765px) {
             .minimal-summary {
-                // margin: 15px 0px;
+                position: absolute;
+                top: 45%;
                 display: inline-block;
                 white-space: pre-wrap;
                 text-overflow: ellipsis;
                 overflow: hidden;
                 width: 80%;
+                border-right: 1px solid $f4;
 
             [class='summary-data'] {
                     display:none;
