--- a/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
@@ -547,3 +547,9 @@
         float: right;
     }
 }
+
+@media only screen and (max-width: 765px) {
+    .desktop {
+        display: none;
+    }
+}
