--- a/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
@@ -203,6 +203,7 @@
                 padding: 10px;
                 margin: 5px 20px;
                 width: 111%;
+                text-transform: capitalize;
             }
         
     }
