--- a/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
@@ -558,6 +558,7 @@
 
 .search-group {
     display: block;
+    white-space: nowrap;
     padding: 0px 20px;
     .btn-blue {
         height: 44px;
